added static server foo.

--- a/upload.html
+++ b/upload.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title>Moustachio</title>
+    <title>dividere - really simple file sharing.</title>
 </head>
 <body>
-    <p>Upload an image to moustachify:</p>
+    <p>Upload a file:</p>
     <form action="/" method="POST"
           enctype="multipart/form-data">
-          <input type="file" name="image">
+          <input type="file" name="uploaded_file">
           <input type="submit" value="Upload">
     </form>
 </body>
