displaying w/ templates test code

--- a/html/error.html
+++ b/html/error.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <title>Moustachio</title>
+    <title>teilom.at</title>
 </head>
 <body>
-    <p>error</p>
+    <p>Teilomat Fehler</p>
 </body>
 </html>
