this works for a single file now.

--- a/html/error.html
+++ b/html/error.html
@@ -3,6 +3,7 @@
     <title>teilom.at</title>
 </head>
 <body>
-    <p>Teilomat Fehler</p>
+    <p>Der Teilomat versagt!</p>
+    <p>{{.ErrorCode}} &mdash; {{.ErrorMessage}}</p>
 </body>
 </html>
